--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -9,6 +9,7 @@
     line-height: 30px
     text-transform: uppercase
     padding-bottom: 57px
+    margin: 0
   &-wrapper
     // border: 1px solid blue
     display: flex
