--- a/sass/blocks/_breadcrumb.sass
+++ b/sass/blocks/_breadcrumb.sass
@@ -2,12 +2,14 @@
   &-list
     display: flex
     align-items: center
-    padding: 18px 0
+    padding: 18px 0 19px 0
     margin: 0
     list-style: none
     &__item
+      font-weight: normal
       font-size: 10px
       line-height: 13px
+
       &:not(:last-child)
         &::after
           content: '/'
