--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,9 +10,14 @@
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
   &__logo
-    width: 166px
+    width: 164px
+    height: 172px
     grid-row: 1 / 3
     align-self: center
+    margin-top: 5px
+  &__legal
+    background-color: #fff
+
   &__categories
     grid-row: 1 / 4
   &__social
@@ -27,13 +32,15 @@
       grid-row: 2 / 4
       grid-column: span 2
       // background-color: red
+  &_legal
+    margin-left: auto
   &__contact
     &-details
       grid-column: span 2
+      align-content: 
     &-form
       grid-column: span 2
-      // новое для футер боттом
-      margin-bottom: 102px
+      margin-bottom: 52px
 
   &__button
     &-list
@@ -47,7 +54,7 @@
     align-items: center
     justify-content: space-between
   &__input
-    flex-basis: 40%
+    flex-basis: 48%
     font-style: normal
     font-weight: normal
     font-size: 12px
@@ -71,7 +78,7 @@
     font-weight: bold
     font-size: 18px
     line-height: 23px
-    margin: 0 0 16px 0
+    margin: 0 0 20px 0
     text-transform: uppercase
     &--inline
       margin: 0 43px 0 0
