--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,8 @@
       font-size: 14px
       line-height: 18px
       text-transform: uppercase
+      font-weight: bold
+
     &__item
       &--mobile
         &--visible
