--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -22,6 +22,7 @@
     align-items: center
     justify-content: space-between
     margin: auto
+ 
     max-width: 731px
   &-title
     color: $light
@@ -29,6 +30,8 @@
     font-weight: 300
     font-size: 24px
     line-height: 30px
+    margin-top: 0
+    margin-bottom: 0
     // мое
     max-width: 242px
     display: flex
@@ -72,6 +75,7 @@
     color: $light
     outline: 0
     border-radius: 0 4px 4px 0
+    cursor: pointer
 
 
 
