--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -395,14 +395,22 @@
       font-size: 13px
       line-height: 150%
 @media (max-width: 576px)
-  .button
-    cursor: none
+  .button,
+  .link
+    cursor: auto
   .card
     &__button
-      cursor: none
+      cursor: auto
   .subscribe
     &__button
-      cursor: none
+      cursor: auto
+  .footer
+    &__link
+      cursor: auto
+  .breadcrumb
+    &-list
+      &__link
+        cursor: default
   .logo
     width: 99px
   .hotel
