--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -13,6 +13,7 @@
     &__name
       margin-top: 4px
       margin-bottom: 0
+      text-transform: uppercase
     &__description
       margin-top: 0
   &-name
@@ -56,21 +57,6 @@
         bottom: 0
         background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
         z-index: 10
-    // &-slide
-    //   &::after
-    //     content: ''
-    //     position: absolute
-    //     width: 100%
-    //     height: 100%
-    //     top: 0
-    //     left: 0
-    //     right: 0
-    //     bottom: 0
-    //     background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    //     z-index: 10
-    //     border-radius: 8px
-    // &__image
-    //   border-radius: 8px
     &__button
       position: absolute
       top: 50%
@@ -201,6 +187,11 @@
   background-color: black
   border-radius: 10px
   overflow: hidden
+  border-style: none
+
+
+
+  
 
     
 
