--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -21,7 +21,6 @@
     line-height: 30px
     font-weight: bold
     padding-top: 6px
- 
   &-wrapper
     display: flex
     flex-wrap: wrap
@@ -81,8 +80,6 @@
   position: absolute
   flex-basis: 100%
   top: -10%
-  // width: 48px
-  // height: 8px
 .offer
   font-size: 10px
   line-height: 13px
@@ -184,10 +181,31 @@
 .map
   width: 347px
   height: 213px
-  background-color: black
+  background-color: $secondary
   border-radius: 10px
   overflow: hidden
   border-style: none
+
+.gm-style .gm-style-mtc label,
+.gm-style .gm-style-mtc div 
+  font-weight: 400
+
+
+.gm-style .gm-style-cc span,
+.gm-style .gm-style-cc a,
+.gm-style .gm-style-mtc div 
+  font-size: 10px
+
+
+.gm-style 
+  font: 400 11px sans-serif
+  text-decoration: none
+
+.gm-style img 
+  max-width: none
+
+
+
 
 
 
