--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -76,6 +76,10 @@
     outline: 0
     border-radius: 0 4px 4px 0
     cursor: pointer
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
+
 
 
 
